--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,6 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-live-clock": "^4.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1"
@@ -36,7 +38,6 @@
       "last 1 safari version"
     ]
   },
-
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
